# example-cpp-func-for-py

./: CMakeLists.txt  compile  configure  environment.yml
python/: test_module.py
scripts/: test_module.py
src/: main.cpp
